[build-system]
    requires = [
        'setuptools',
        'wheel',
        'build>=1.2.0'
    ]

[project]
    name = 'ci-utils'
    version = '0.1.0'
    authors = [
        {name = 'Alex Lourie', email = 'alex.lourie@zepben.com'},
        {name = 'Max Chesterfield', email = 'max.chesterfield@zepben.com'}
    ]
    readme = {file = 'README.md', content-type = 'text/markdown'}

    dependencies = [
        'click',
        'gitpython',
        'jinja2',
        'slack_sdk'
    ]
    requires-python = '>=3.10'

[project.optional-dependencies]
    test = [
        'pytest'
    ]
[project.scripts]
    ci = 'ci_utils.cli:cli'
